added the layer switcher and new layers on the website  and created new folders
new folders: website, libraries for a better structure

--- a/website/startpage.html
+++ b/website/startpage.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <!-- used librarys-->
-<link rel="stylesheet" href="leaflet-0.6.4/leaflet.css" ></link>
-<script src="leaflet-0.6.4/leaflet.js"></script>
-<script src="jQuery.js"></script>
+<link rel="stylesheet" href="libraries/leaflet-0.6.4/leaflet.css" ></link>
+<script src="libraries/leaflet-0.6.4/leaflet.js"></script>
+<script src="libraries/jQuery.js"></script>
 <!-- created style sheets and scripts-->
 <link rel="stylesheet" href="startpage.css"></link>
 <script src="startpageFunctions.js"></script>
@@ -14,17 +14,76 @@
  </div>  
  <script>
 /**
-The map is created and an openstreet map layer is added to the map.
+The map is created and some layers are added to the map.
 reference: http://leafletjs.com/examples/quick-start-example.html
+           http://leafletjs.com/reference.html#tilelayer-wms
+		   http://leafletjs.com/examples/layers-control.html
 */
+//create map
 var map = L.map('map').setView([51.9604,7.6197], 14);
-var layer1=L.tileLayer('http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/997/256/{z}/{x}/{y}.png', {
-    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a>'
-+' contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>,'
-+'Imagery &copy <a href="http://cloudmade.com">CloudMade</a>',
-    maxZoom: 18
+
+//OSM maps one as overlay and one base layer 
+var layerOSM=L.tileLayer('http://a.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy<a href="www.openstretmap.org/copyright ">OpenStreetMap</a> contributors',
+	
 });
-layer1.addTo(map);
+var layerOSMtransparent=L.tileLayer('http://a.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    attribution: '&copy<a href="www.openstretmap.org/copyright ">OpenStreetMap</a> contributors',
+	opacity:0.5,
+    format: 'image/png',
+	
+});
+//Layers of Geobasis NRW: http://www.bezreg-koeln.nrw.de/brk_internet/organisation/abteilung07/produkte/nrwatlas/index.html 
+//                          (website which provides different Web Map Service (WMS)-URLs)
+var layerDTK10_pan=L.tileLayer.wms('http://www.wms.nrw.de/geobasis/wms_nw_dtk10', {
+   attribution: '| &copy Geobasis NRW 2013',
+	layers: 'NW_DTK10_pan',
+    format: 'image/png',
+    transparent: true,
+	opacity:0.4	
+});
+var layerDTK10=L.tileLayer.wms('http://www.wms.nrw.de/geobasis/wms_nw_dtk10', {
+     attribution: '| &copy Geobasis NRW 2013',
+	layers: 'nw_dtk10_pan,nw_dtk10_res,NW_DTK10_col,WMS_NW_DTK10',
+    format: 'image/png',
+    transparent: true
+});
+//layer of the different districts
+var layerDVG=L.tileLayer.wms('http://www.wms.nrw.de/geobasis/wms_nw_dvg', {
+     attribution: '| &copy Geobasis NRW 2013',
+	layers: 'WMS_NW_DVG',
+    format: 'image/png',
+    transparent: true,
+	opacity:0.5
+});
+var layerDGK5=L.tileLayer.wms('http://www.wms.nrw.de/geobasis/wms_nw_dgk5', {
+ attribution: '| &copy Geobasis NRW 2013',
+	layers: 'WMS_NW_DGK5',
+    format: 'image/png',
+    transparent: true,
+	opacity:0.5
+});
+//Orthophoto layer
+var layerOrtho = L.tileLayer.wms('http://www.wms.nrw.de/geobasis/wms_nw_dop40', {
+    layers: 'WMS_NW_DOP40',
+    format: 'image/png',
+	version:'1.3.0',
+    attribution: '| &copy Geobasis NRW 2013'
+});
+//The map which is visualized when you get on the website.
+layerOSM.addTo(map);
+
+//Map control: Layer switcher
+var baseMaps={ "OSM": layerOSM,
+               "arial view": layerOrtho,
+			   "DTK10":layerDTK10
+               };
+var overlapMaps={"OSM":layerOSMtransparent,
+                  "DVG":layerDVG,
+				  "DTK10_pan":layerDTK10_pan,
+				  "DGK5":layerDGK5};
+var control=L.control.layers(baseMaps,overlapMaps,{position:'bottomleft'}).addTo(map);
+
 
 /**
 The sidebar is created. The function onAdd() creates a html object 
