Adding points, dragging,popup

--- a/website/startpage.html
+++ b/website/startpage.html
@@ -10,6 +10,7 @@
 <script src="startpageFunctions.js"></script>
 </head>
 <body>
+
  <div id="map" >
  </div>  
  <script>
@@ -121,12 +122,15 @@ This paragraph adds the title to the sidebar.
 Moreover the margin-left has to be defined so the title component doesn't overlaps with the sidebar border. 
 */
 $("#sideBar").append("<div id='sidebarTitle'class='SidebarTitle' style='height:"+parseInt(heightSidebar/20)+"px'>More Information</div>");
+//$("#sideBar").append("<input type='button' id='Btn1' value='Add Point' onclick='addPoint()' class='btnStyle span3' />");
+//$("#sideBar").append("<input type='button' id='Btn1' value='Save' onclick='' class='btnStyle span3' />");
 $("#sidebarTitle").css("margin-left",$("#sidebarBorder").width());
 /**
 The element 'sidebarContent' contains the different information boxes.
 Moreover some attributes for design depending on other objects are defined.
 */
 $("#sideBar").append("<div id='sidebarContent'class='SidebarContent'></div>");
+
 $("#sidebarContent").css("max-width",parseInt(sidebar.getContainer().offsetWidth-parseInt($("#sidebarBorder").width()))+"px");
 $("#sidebarContent").css("margin-left",$("#sidebarBorder").width());
 $("#sidebarContent").css("height",parseInt(heightSidebar-(heightSidebar/20)-30)+"px");
@@ -141,7 +145,10 @@ $("#sidebarItem"+i).css("max-width",parseInt((sidebar.getContainer().offsetWidth
 $("#sidebarItem"+i).css("min-height",parseInt(heightSidebar/6)+"px");
 }
 <!--map.on('click', onClickMap); (Used while testing. If one click on the map, the sidebar opens. -->
+  
  </script>
+ <input type='button' id='Btn1' value='Add Point' onclick='addPoint()' class='btnStyle span3' />
+ <input type='button' id='Btn2' value='Save' onclick='save()' class='btnStyle span3' />
 </body>
 </html>
 
