Connection to database with Ajax (start)

--- a/website/startpage.html
+++ b/website/startpage.html
@@ -165,7 +165,7 @@ $("#sidebarItem"+i).css("min-height",parseInt(heightSidebar/6)+"px");
   
   
  </script>
-
+<div id="myDiv">hello</div>
 </body>
 </html>
 
