database communication with JSON

--- a/website/startpage.html
+++ b/website/startpage.html
@@ -30,6 +30,7 @@
  
  </div> 
  <script>
+ callPoints();
 /**
 The map is created and some layers are added to the map.
 reference: http://leafletjs.com/examples/quick-start-example.html
