Save Point in Database

--- a/website/startpage.html
+++ b/website/startpage.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="libraries/leaflet-0.6.4/leaflet.css" ></link>
 <script src="libraries/leaflet-0.6.4/leaflet.js"></script>
 <script src="libraries/jQuery.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+</script>
 <!-- created style sheets and scripts-->
 <link rel="stylesheet" href="startpage.css"></link>
 <script src="startpageFunctions.js"></script>
@@ -30,7 +32,6 @@
  
  </div> 
  <script>
- callPoints();
 /**
 The map is created and some layers are added to the map.
 reference: http://leafletjs.com/examples/quick-start-example.html
