--- a/website/startpage.html
+++ b/website/startpage.html
@@ -26,7 +26,7 @@
 	<div align="center">
 		<button type="button"onclick="mapdown()"style="align:center; position:absolute;top:68%;left:10%;">down</button></div>
 	<div align="center">
-		<input type='button' id='Btn2' value='Save' onclick='save()' class='btnStyle span3'style="align:center; position:absolute;top:68%;left:50%;" />
+		<!--<input type='button' id='Btn2' value='Save' onclick='save()' class='btnStyle span3'style="align:center; position:absolute;top:68%;left:50%;" />-->
 	</div>
  
  
@@ -168,7 +168,6 @@ $("#sidebarItem"+i).css("min-height",parseInt(heightSidebar/6)+"px");
   
   
  </script>
-<div id="myDiv">hello</div>
 </body>
 </html>
 
