Delete function finished

--- a/website/startpage.html
+++ b/website/startpage.html
@@ -168,6 +168,7 @@ $("#sidebarItem"+i).css("min-height",parseInt(heightSidebar/6)+"px");
   
   
  </script>
+ <div id="mydiv"></div>
 </body>
 </html>
 
