--- a/website/startpage.html
+++ b/website/startpage.html
@@ -3,17 +3,37 @@
 <head>
 <!-- used librarys-->
 <link rel="stylesheet" href="libraries/leaflet-0.6.4/leaflet.css" ></link>
-<script src="libraries/leaflet-0.6.4/leaflet.js"></script>
+    <link rel="stylesheet" href="libraries/Leaflet.draw/dist/leaflet.draw.css" />
+    <link rel="stylesheet" href="libraries/Measure/leaflet.measurecontrol.css" />
+	<link rel="stylesheet" href="libraries/MiniMap/fullscreen.css" />
+	<link rel="stylesheet" href="libraries/MiniMap/src/Control.MiniMap.css" />
+	
+	<script src="libraries/leaflet-0.6.4/leaflet.js"></script>
+	 <script src="libraries/Leaflet.draw/dist/leaflet.draw.js" type="text/javascript"></script>
+    <script src="libraries/Measure/leaflet.measurecontrol.js" type="text/javascript"></script>
+	<script src="libraries/MiniMap/src/Control.MiniMap.js" type="text/javascript"></script>
 <script src="libraries/jQuery.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
 </script>
 <!-- created style sheets and scripts-->
 <link rel="stylesheet" href="startpage.css"></link>
 <script src="startpageFunctions.js"></script>
+   <style>
+        #map { 
+            position: absolute;
+            top:0;
+            left: 0;
+            right: 0;
+            bottom:0;
+        }
+        .leaflet-control.enabled a {
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
 
- <div id="map" >
+ <div id="map">
  </div>  
 	<div align="center"> 
 		<button type="button" onclick="mapup()"style="align:left; position:absolute;top:60%;left:10%;">up</button>
@@ -30,7 +50,7 @@
 	</div>
  
  
- </div> 
+
  <script>
  callPoints();
 /**
@@ -43,10 +63,9 @@ reference: http://leafletjs.com/examples/quick-start-example.html
 var map = L.map('map').setView([51.9604,7.6197], 14);
 
 //OSM maps one as overlay and one base layer 
-var layerOSM=L.tileLayer('http://a.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '&copy<a href="www.openstretmap.org/copyright ">OpenStreetMap</a> contributors',
-	
-});
+var osmUrl='http://a.tile.openstreetmap.org/{z}/{x}/{y}.png';
+var osmAttrib='Map data &copy; OpenStreetMap contributors';
+var layerOSM=L.tileLayer(osmUrl, {minZoom: 0, maxZoom: 18, attribution: osmAttrib});
 var layerOSMtransparent=L.tileLayer('http://a.tile.openstreetmap.org/{z}/{x}/{y}.png', {
     attribution: '&copy<a href="www.openstretmap.org/copyright ">OpenStreetMap</a> contributors',
 	opacity:0.5,
@@ -103,7 +122,77 @@ var overlapMaps={"OSM":layerOSMtransparent,
 				  "DTK10_pan":layerDTK10_pan,
 				  "DGK5":layerDGK5};
 var control=L.control.layers(baseMaps,overlapMaps,{position:'bottomleft'}).addTo(map);
+//----------- Adding drawing , editing and measurement tools in addition to mini Map  --------------------
+var drawnItems = new L.FeatureGroup();
+map.addLayer(drawnItems);
+// Set the title to show on the polygon button
+L.drawLocal.draw.toolbar.buttons.polygon = 'Draw a polygon!';
 
+var drawControl = new L.Control.Draw({
+position: 'topleft',
+	draw: {
+			polyline: {
+				metric: true
+			},
+			polygon: {
+				allowIntersection: false,
+				showArea: true,
+				drawError: {
+				color: '#bada55',
+				timeout: 1000
+				},
+				shapeOptions: {
+				color: '#b00b00'
+				}
+			},
+			circle: {
+				shapeOptions: {
+				color: '#662d91'
+				}
+			},
+			marker: true
+			},
+			edit: {
+				featureGroup: drawnItems,
+				remove: false
+			}
+		});
+	
+		
+		map.on('draw:created', function (e) {
+			var type = e.layerType,
+				layer = e.layer;
+
+			if (type === 'marker') {
+				layer.bindPopup('A popup!');
+			}
+				//save to db here , you can check the type is it marker or polygon ... then save it to db
+			drawnItems.addLayer(layer);
+		});
+
+		map.on('draw:edited', function (e) {
+			var layers = e.layers;
+			var countOfEditedLayers = 0;
+			layers.eachLayer(function(layer) {
+				//save to db here , 
+				
+			});
+			
+		});
+	
+// Add Draw contorl 
+	map.addControl(drawControl);	
+//measure Control 
+	L.Control.measureControl().addTo(map);
+//miniMap
+	var osm2 = new L.TileLayer(osmUrl, {minZoom: 0, maxZoom: 13, attribution: osmAttrib });
+	var miniMap = new L.Control.MiniMap(osm2, { toggleDisplay: true }).addTo(map);
+ //
+	L.DomUtil.get('changeColor').onclick = function () {
+		drawControl.setDrawingOptions({ rectangle: { shapeOptions: { color: '#004a80' } } });
+		};
+		//
+//=================================================
 
 /**
 The sidebar is created. The function onAdd() creates a html object 
