--- a/website/index.html
+++ b/website/index.html
@@ -16,6 +16,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
 </script>
 <!-- created style sheets and scripts-->
+<link href="libraries/bootstrap/css/bootstrap.css" rel="stylesheet">
 <link rel="stylesheet" href="startpage.css"></link>
 <script src="startpageFunctions.js"></script>
    <style>
@@ -32,8 +33,26 @@
     </style>
 </head>
 <body>
-
- <div id="map">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">IGI Gesture</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Map</a></li>
+            <li><a href="help.html">Help</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+ <div id="map" style="position:absolute;top:51px; width: 100%; height: 92%;">
  </div>  
 	<div align="center"> 
 		<button type="button" title="up" onclick="mapup()"style="align:left; position:absolute;top:60%;left:10%;">up</button>
