Hide navigation buttons

--- a/website/index.html
+++ b/website/index.html
@@ -55,18 +55,18 @@
  <div id="map" style="position:absolute;top:51px; width: 100%; height: 92%;">
  </div>  
 	<div align="center"> 
-		<button type="button" title="up" onclick="mapup()"style="align:left; position:absolute;top:60%;left:10%;">up</button>
 		<input type='button' title="Add Point" id='Btn1' value='Add Point' onclick='addPoint()' class='btnStyle span3' style="align:center; position:absolute;top:63%;left:49%;"/>
 	</div>
-	<div align="center">
+	<!--<div align="center">
+		<button type="button" title="up" onclick="mapup()"style="align:left; position:absolute;top:60%;left:10%;">up</button>
 		<button type="button" title="left" onclick="mapleft()"style="align:left; position:absolute;top:63%;left:5%;">left</button> 
 		<button type="button" title="right" onclick="mapright()"style="align:left; position:absolute;top:63%;left:15%;">right</button>
 	</div>
 	<div align="center">
 		<button type="button" title="down" onclick="mapdown()"style="align:center; position:absolute;top:68%;left:10%;">down</button></div>
 	<div align="center">
-		<!--<input type='button' id='Btn2' value='Save' onclick='save()' class='btnStyle span3'style="align:center; position:absolute;top:68%;left:50%;" />-->
-	</div>
+		<!--<input type='button' id='Btn2' value='Save' onclick='save()' class='btnStyle span3'style="align:center; position:absolute;top:68%;left:50%;" />
+	</div> -->
  
  
 
