--- a/website/index.html
+++ b/website/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <!-- used librarys-->
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+ <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+ <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <link rel="stylesheet" href="libraries/leaflet-0.6.4/leaflet.css" ></link>
     <link rel="stylesheet" href="libraries/Leaflet.draw/dist/leaflet.draw.css" />
     <link rel="stylesheet" href="libraries/Measure/leaflet.measurecontrol.css" />
