--- a/website/pointinformation.html
+++ b/website/pointinformation.html
@@ -9,9 +9,8 @@
  
 <div id="dialog" title="Point Information">
 <div>
-
-<form action="demo_form.asp">
- <br> Point Name: * <br> <input type="text" SIZE=30 name="id" required><br>
+<form action="point_data.php" method="get">
+<br> Point Name: * <br> <input type="text" SIZE=30 name="id" required><br>
  <br> Website URL: <INPUT type="url" SIZE=30 NAME="url"><br>
   <br>Notes : <input style="width: 300px; height: 150px;" name="note"><br><br><br> 
   
