Attributes for Lines

--- a/website/index.html
+++ b/website/index.html
@@ -105,7 +105,7 @@ function al(){
 		type = true;
 	if (document.getElementById('alternative').checked)
 		type = false;
-	addPointAttributes(name,des,type);
+	addLineAttributes(name,des,type);
 }
 
  callPoints();
