--- a/website/index.html
+++ b/website/index.html
@@ -60,22 +60,13 @@
     </div>
  <div id="map" style="position:absolute;top:51px; width: 100%; height: 92%;">
  </div>  
-	<!--<div align="center">
-		<button type="button" title="up" onclick="mapup()"style="align:left; position:absolute;top:60%;left:10%;">up</button>
-		<button type="button" title="left" onclick="mapleft()"style="align:left; position:absolute;top:63%;left:5%;">left</button> 
-		<button type="button" title="right" onclick="mapright()"style="align:left; position:absolute;top:63%;left:15%;">right</button>
-	</div>
-	<div align="center">
-		<button type="button" title="down" onclick="mapdown()"style="align:center; position:absolute;top:68%;left:10%;">down</button></div>
-	<div align="center">
-		<!--<input type='button' id='Btn2' value='Save' onclick='save()' class='btnStyle span3'style="align:center; position:absolute;top:68%;left:50%;" />
-	</div> -->
+
 
  <div id="sidebar"> 
 	<br> Name:  
-	<input id="name" type="text" SIZE=30 name="name" required><br>
+	<input id="pointname" type="text" SIZE=30 name="name" required><br>
 	
-	<br>Description :<br> <input id="des" style="width: 300px; height: 150px;" name="description"><br><br><br> 
+	<br>Description :<br> <input id="pointdes" style="width: 300px; height: 150px;" name="description"><br><br><br> 
 
 	<button type="button" onclick="ap()">Submit</button>
 	<input TYPE="RESET" VALUE="Clear">
@@ -93,9 +84,21 @@
 
 <script src="libraries/L.Control.Sidebar.js"></script>
  <script>
+var map = L.map('map').setView([51.9604,7.6197], 14);
+
+ var sidebar = L.control.sidebar('sidebar', {
+    position: 'right'
+});
+ var sidebarLine = L.control.sidebar('sidebarLine', {
+    position: 'right'
+});
+
+map.addControl(sidebar);
+map.addControl(sidebarLine); 
+ 
 function ap(){
-	name=document.getElementById('name').value;
-	des =document.getElementById('des').value;
+	name=document.getElementById('pointname').value;
+	des =document.getElementById('pointdes').value;
 	addPointAttributes(name,des);
 }
 
@@ -122,17 +125,7 @@ reference: http://leafletjs.com/examples/quick-start-example.html
 		   http://leafletjs.com/examples/layers-control.html
 */
 //create map
-var map = L.map('map').setView([51.9604,7.6197], 14);
 
- var sidebar = L.control.sidebar('sidebar', {
-    position: 'right'
-});
- var sidebarLine = L.control.sidebar('sidebarLine', {
-    position: 'right'
-});
-
-map.addControl(sidebar);
-map.addControl(sidebarLine);
 
 		
 //OSM maps one as overlay and one base layer 
@@ -358,6 +351,16 @@ $("#sidebarItem"+i).css("min-height",parseInt(heightSidebar/6)+"px");
       });  
   
  </script>
+ 	<!--<div align="center">
+		<button type="button" title="up" onclick="mapup()"style="align:left; position:absolute;top:60%;left:10%;">up</button>
+		<button type="button" title="left" onclick="mapleft()"style="align:left; position:absolute;top:63%;left:5%;">left</button> 
+		<button type="button" title="right" onclick="mapright()"style="align:left; position:absolute;top:63%;left:15%;">right</button>
+	</div>
+	<div align="center">
+		<button type="button" title="down" onclick="mapdown()"style="align:center; position:absolute;top:68%;left:10%;">down</button></div>
+	<div align="center">
+		<!--<input type='button' id='Btn2' value='Save' onclick='save()' class='btnStyle span3'style="align:center; position:absolute;top:68%;left:50%;" />
+	</div> -->
 </body>
 </html>
 
