--- a/website/index.html
+++ b/website/index.html
@@ -76,7 +76,7 @@
 	<br> Name:  
 	<input id="name" type="text" SIZE=30 name="name" required><br>	
 	<br>Description :<br> <input id="des" style="width: 300px; height: 150px;" name="description"><br><br><br> 
-	<input id="main" type="radio" name="Zahlmethode" value="Main"> Main road<br>
+	<input id="main" type="radio" name="Zahlmethode" value="Main"> Planned road<br>
     <input id="alternative" type="radio" name="Zahlmethode" value="Alternative"> Alternative road<br>  
 	<button type="button" onclick="al()">Submit</button>
 	<input TYPE="RESET" VALUE="Clear">
@@ -246,7 +246,7 @@ position: 'topleft',
 				sidebarLine.show();				
 			}
 				//save to db here , you can check the type is it marker or polygon ... then save it to db
-			drawnItems.addLayer(layer);
+			//drawnItems.addLayer(layer);
 		});
 
 		map.on('draw:edited', function (e) {
@@ -331,10 +331,11 @@ $("#sidebarItem"+i).css("min-height",parseInt(heightSidebar/6)+"px");
 <!--map.on('click', onClickMap); (Used while testing. If one click on the map, the sidebar opens. -->
   
        var circle = L.circleMarker([0, 0], {radius: 5, fillColor: 'white', fillOpacity: 1});
-
+	   var previousColor;	
       map.on('almost:over', function (e) {
         map.addLayer(circle);
-        e.layer.setStyle({color: 'red'});
+        previousColor = e.layer.options.color;
+		e.layer.setStyle({color: 'blue'});
       });
 
       map.on('almost:move', function (e) {
@@ -343,11 +344,13 @@ $("#sidebarItem"+i).css("min-height",parseInt(heightSidebar/6)+"px");
 
       map.on('almost:out', function (e) {
         map.removeLayer(circle);
-        e.layer.setStyle({weight: 5, color: '#03f'});
+        e.layer.setStyle({color:previousColor});
       });
 
       map.on('almost:click', function (e) {
-        e.layer.setStyle({weight: 10});
+        e.layer.openPopup();
+		e.layer.setStyle({});
+		
       });  
   
  </script>
