adapt links for websocket

--- a/website/index.html
+++ b/website/index.html
@@ -6,25 +6,26 @@
  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css">
-    <link rel="stylesheet" href="libraries/Leaflet.draw/dist/leaflet.draw.css" />
-    <link rel="stylesheet" href="libraries/Measure/leaflet.measurecontrol.css" />
-	<link rel="stylesheet" href="libraries/MiniMap/fullscreen.css" />
-	<link rel="stylesheet" href="libraries/MiniMap/src/Control.MiniMap.css" />
-	<link rel="stylesheet" href="libraries/L.Control.Sidebar.css" />
+    <link rel="stylesheet" href="http://giv-geointeraction.uni-muenster.de/libraries/Leaflet.draw/dist/leaflet.draw.css" />
+    <link rel="stylesheet" href="http://giv-geointeraction.uni-muenster.de/libraries/Measure/leaflet.measurecontrol.css" />
+	<link rel="stylesheet" href="http://giv-geointeraction.uni-muenster.de/libraries/MiniMap/fullscreen.css" />
+	<link rel="stylesheet" href="http://giv-geointeraction.uni-muenster.de/libraries/MiniMap/src/Control.MiniMap.css" />
+	<link rel="stylesheet" href="http://giv-geointeraction.uni-muenster.de/libraries/L.Control.Sidebar.css" />
 	
 	<script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
-	<script src="libraries/Leaflet.draw/dist/leaflet.draw.js" type="text/javascript"></script>
-    <script src="libraries/Measure/leaflet.measurecontrol.js" type="text/javascript"></script>
-	<script src="libraries/MiniMap/src/Control.MiniMap.js" type="text/javascript"></script>
+	<script src="http://giv-geointeraction.uni-muenster.de/libraries/Leaflet.draw/dist/leaflet.draw.js" type="text/javascript"></script>
+    <script src="http://giv-geointeraction.uni-muenster.de/libraries/Measure/leaflet.measurecontrol.js" type="text/javascript"></script>
+	<script src="http://giv-geointeraction.uni-muenster.de/libraries/MiniMap/src/Control.MiniMap.js" type="text/javascript"></script>
 	
-	<script type='text/javascript' src="libraries/GeometryUtil/dist/leaflet.geometryutil.js"></script>
-	<script type='text/javascript' src="libraries/leaflet.almostover.js"></script>
-	<script src="libraries/jQuery.js"></script>
+	<script type='text/javascript' src="http://giv-geointeraction.uni-muenster.de/libraries/GeometryUtil/dist/leaflet.geometryutil.js"></script>
+	<script type='text/javascript' src="http://giv-geointeraction.uni-muenster.de/libraries/leaflet.almostover.js"></script>
+	<script src="http://giv-geointeraction.uni-muenster.de/libraries/jQuery.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <!-- created style sheets and scripts-->
-<link href="libraries/bootstrap/css/bootstrap.css" rel="stylesheet">
-<link rel="stylesheet" href="startpage.css"></link>
-<script src="startpageFunctions.js"></script>
+<link href="http://giv-geointeraction.uni-muenster.de/libraries/bootstrap/css/bootstrap.css" rel="stylesheet">
+<link rel="stylesheet" href="http://giv-geointeraction.uni-muenster.de/startpage.css"></link>
+<script type="text/javascript" src="http://giv-geointeraction.uni-muenster.de/startpageFunctions.js"></script>
+<script type="text/javascript" src="http://giv-geointeraction.uni-muenster.de/libraries/L.Control.Sidebar.js"></script>
    <style>
         #map { 
             position: absolute;
@@ -38,6 +39,7 @@
         }
     </style>
 </head>
+
 <body>
  
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -104,7 +106,6 @@
 	<button id="button1" type="button">Move to</button>
 </div>
 
-<script src="libraries/L.Control.Sidebar.js"></script>
  <script>
 var map = L.map('map').setView([51.9604,7.6197], 14);
 
@@ -344,5 +345,3 @@ position: 'topleft',
 		
 	</body>
 </html>
-
-
