--- a/website/index.html
+++ b/website/index.html
@@ -238,7 +238,9 @@ map.addLayer(drawnItems);
 // Set the title to show on the polygon button
 L.drawLocal.draw.toolbar.buttons.polygon = 'Draw a polygon!';
 
+//Following codeblocks are shortcuts for the functions on the map
 
+//add a marker: ctrl + shift +q
 	var isCtrl = false;
 	var isShift=false
 	$(document).keyup(function (e) {
@@ -254,11 +256,73 @@ L.drawLocal.draw.toolbar.buttons.polygon = 'Draw a polygon!';
 	if(e.which == 16) 
 		isShift=true;	
     if(e.which == 81 && isCtrl == true && isShift == true) {
-        new L.Draw.Marker(map, drawControl.options.marker).enable( )// to invoke draw Marker command 
+        new L.Draw.Marker(map, drawControl.options.marker).enable()
  	return false;
  }
 });
 
+//add a Line: ctrl + shift + e
+	var isCtrl = false;
+	var isShift=false
+	$(document).keyup(function (e) {
+	if(e.which == 17) 
+		isCtrl=false;
+	}).keyup(function (e) {
+	if(e.which == 16) 
+		isCtrl=false;
+	})
+	.keydown(function (e) {
+    if(e.which == 17) 
+		isCtrl=true;
+	if(e.which == 16) 
+		isShift=true;	
+    if(e.which == 69 && isCtrl == true && isShift == true) {
+       new L.Draw.Polyline(map, drawControl.options.polyline).enable() 
+ 	return false;
+ }
+});
+
+//show projects: ctrl + shift + t
+	var isCtrl = false;
+	var isShift=false
+	$(document).keyup(function (e) {
+	if(e.which == 17) 
+		isCtrl=false;
+	}).keyup(function (e) {
+	if(e.which == 16) 
+		isCtrl=false;
+	})
+	.keydown(function (e) {
+    if(e.which == 17) 
+		isCtrl=true;
+	if(e.which == 16) 
+		isShift=true;	
+    if(e.which == 84 && isCtrl == true && isShift == true) {
+       showProjects(); 
+ 	return false;
+ }
+});
+
+//measure tool: ctrl+shift+m
+	var isCtrl = false;
+	var isShift=false
+	$(document).keyup(function (e) {
+	if(e.which == 17) 
+		isCtrl=false;
+	}).keyup(function (e) {
+	if(e.which == 16) 
+		isCtrl=false;
+	})
+	.keydown(function (e) {
+    if(e.which == 17) 
+		isCtrl=true;
+	if(e.which == 16) 
+		isShift=true;	
+    if(e.which == 77 && isCtrl == true && isShift == true) {
+       new L.Draw.Polyline.extend(map, drawControl.options.polyline).enable()
+ 	return false;
+ }
+});
 
 var drawControl = new L.Control.Draw({
 position: 'topleft',
@@ -358,20 +422,6 @@ position: 'topleft',
 		
       });  
 	  
-
-
-	var isCtrl = false;
-	$(document).keyup(function (e) {
-	if(e.which == 17) 
-		isCtrl=false;
-	}).keydown(function (e) {
-    if(e.which == 17) 
-		isCtrl=true;
-    if(e.which == 83 && isCtrl == true) {
-        alert('Another possible shortcut');
- 	return false;
- }
-});
   
  </script>
  	<!--<div align="center">
