fix links to source files for the server

--- a/SpeechAndLeaflet/MultimodalGIS_Chrome.html
+++ b/SpeechAndLeaflet/MultimodalGIS_Chrome.html
@@ -4,23 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Speech & Gesture Map</title>
-    <link rel="stylesheet" href="src/Leaflet-0.7/leaflet.css" />
+    <link rel="stylesheet" href="src/leaflet-0.7/leaflet.css" />
     <link rel="stylesheet" href="src/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="src/bootstrap/font-awesome.css" />
     <link rel="stylesheet" href="src/Leaflet.minimap/Control.MiniMap.css" />
     <link rel="stylesheet" href="src/Leaflet.geosearch/l.geosearch.css" />
     <link rel="stylesheet" href="src/Leaflet.zoomslider/L.Control.Zoomslider.css" />
-    <link rel="stylesheet" href="src/Leaflet.pancontrol/L.Control.Pan.css" />
-    <link rel="stylesheet" href="src/Leaflet.pancontrol/L.Control.Pan.ie.css" />
+    <link rel="stylesheet" href="src/Leaflet.Pancontrol/L.Control.Pan.css" />
+    <link rel="stylesheet" href="src/Leaflet.Pancontrol/L.Control.Pan.ie.css" />
     <link rel="stylesheet" href="src/leaflet.locator/L.Control.Locate.css" />
-    <link rel="stylesheet" href="src/Leaflet.viewcenter/leaflet.viewcenter.css" />
+    <link rel="stylesheet" href="src/leaflet.viewcenter/leaflet.viewcenter.css" />
     <link rel="stylesheet" href="src/Leaflet.loading/Control.Loading.css" />
     <link rel="stylesheet" href="src/Leaflet.sidebar/L.Control.Sidebar.css" />
-    <link rel="stylesheet" href="src/Leaflet.revealOSM/Leaflet.RevealOSM.css" />
-    <link rel="stylesheet" href="src/Leaflet.editInOSM/Leaflet.EditInOSM.css" />
+    <link rel="stylesheet" href="src/Leaflet.RevealOSM/Leaflet.RevealOSM.css" />
+    <link rel="stylesheet" href="src/Leaflet.EditInOSM/Leaflet.EditInOSM.css" />
     <link rel="stylesheet" href="src/Leaflet.contextmenu/leaflet.contextmenu.css" />
     <link rel="stylesheet" href="src/Leaflet.draw/leaflet.draw.css" />
-    <link rel="stylesheet" href="src/Leaflet.measureControl/leaflet.measurecontrol.css" />
+    <link rel="stylesheet" href="src/Leaflet.MeasureControl/leaflet.measurecontrol.css" />
     
     <link rel="stylesheet" href="src/custom/custom_css.css"/>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
@@ -457,7 +457,7 @@
     <script src="src/speech/sphinx/callbackManager.js"></script>
 	
 	<script src="src/bootstrap/bootstrap.min.js"></script>
-    <script src="src/Leaflet-0.7/leaflet.js"></script>
+    <script src="src/leaflet-0.7/leaflet.js"></script>
 	<!--https://github.com/Leaflet/Leaflet-->
     <script src="src/Leaflet.lvector/lvector-custom.js"></script>
     <!--https://github.com/JasonSanford/leaflet-vector-layers -->
@@ -467,31 +467,31 @@
     <!-- https://github.com/smeijer/L.GeoSearch-->
     <script src="src/Leaflet.geosearch/l.geosearch.provider.google.js"></script>
     <!-- https://github.com/smeijer/L.GeoSearch-->
-    <script src="src/Leaflet.zoomfs/leaflet.zoomfs.js"></script>
+    <script src="src/leaflet.zoomfs/leaflet.zoomfs.js"></script>
     <!-- Fullscreen Button https://github.com/elidupuis/leaflet.zoomfs -->
     <script src="src/Leaflet.zoomslider/L.Control.Zoomslider.js"></script>
     <!-- http://kartena.github.io/Leaflet.zoomslider/ -->
-    <script src="src/Leaflet.pancontrol/L.Control.Pan.js"></script>
+    <script src="src/Leaflet.Pancontrol/L.Control.Pan.js"></script>
     <!-- http://kartena.github.io/Leaflet.Pancontrol/ -->
-    <script src="src/Leaflet.locator/L.Control.Locate.js"></script>
+    <script src="src/leaflet.locator/L.Control.Locate.js"></script>
     <!-- https://github.com/domoritz/leaflet-locatecontrol -->
-    <script src="src/Leaflet.viewcenter/leaflet.viewcenter.js"></script>
+    <script src="src/leaflet.viewcenter/leaflet.viewcenter.js"></script>
     <!-- https://github.com/pwldp/leaflet.viewcenter -->
     <script src="src/Leaflet.loading/Control.Loading.js"></script>
     <!-- https://github.com/ebrelsford/Leaflet.loading -->
     <script src="src/Leaflet.sidebar/L.Control.Sidebar.js"></script>
 	<!--https://github.com/turbo87/leaflet-sidebar/-->
-    <script src="src/Leaflet.providers/leaflet-providers.js"></script>
+    <script src="src/leaflet.providers/leaflet-providers.js"></script>
     <!--https://github.com/leaflet-extras/leaflet-providers -->
-    <script src="src/Leaflet.revealOSM/Leaflet.RevealOSM.js"></script>
+    <script src="src/Leaflet.RevealOSM/Leaflet.RevealOSM.js"></script>
     <!--https://github.com/yohanboniface/Leaflet.RevealOSM -->
-    <script src="src/Leaflet.editInOSM/Leaflet.EditInOSM.js"></script>
+    <script src="src/Leaflet.EditInOSM/Leaflet.EditInOSM.js"></script>
     <!--https://github.com/yohanboniface/Leaflet.EditInOSM -->
     <script src="src/Leaflet.contextmenu/leaflet.contextmenu.js"></script>
     <!--https://github.com/aratcliffe/Leaflet.contextmenu-->
     <script src="src/Leaflet.draw/leaflet.draw.js"></script>
     <!--https://github.com/Leaflet/Leaflet.draw -->
-    <script src="src/Leaflet.measureControl/leaflet.measurecontrol.js"></script>
+    <script src="src/Leaflet.MeasureControl/leaflet.measurecontrol.js"></script>
     <!--https://github.com/makinacorpus/Leaflet.MeasureControl-->
     <script src="src/Leaflet.geometryUtil/dist/leaflet.geometryutil.js"></script>
     <!--https://github.com/makinacorpus/Leaflet.GeometryUtil-->
