--- a/SpeechAndLeaflet/MultimodalGIS_Chrome.html
+++ b/SpeechAndLeaflet/MultimodalGIS_Chrome.html
@@ -102,11 +102,14 @@
 		<div id="sidebarCommentsTable"></div>
 	</div>
 
-	<div id="sidebarProjects"> 
-		<b>Recent Projects</b></br></br>
-		Name:<p id="name1"></p></br>
-		Description:<p id="des1"></p></br>
-		<button id="button1" type="button">Move to</button>
+	<div id="sidebarProjects">
+		<div>
+			<b>
+				<big>Recent Projects</big>
+			</b></br></br>
+		</div>
+		<div id="sidebarProjectsContent">
+		</div>
 	</div>
 	
 	
